# compcol

./: .gitignore  BENCH.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SECURITY_AUDIT_2026-05-30.md
.github/workflows/: ci.yml  fuzz.yml  release-binaries.yml  release-plz.yml
docs/: lzss-ref.py  v0.3-trait-redesign.md
examples/: bench.rs  micro.rs  stress.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decoder_amiga_lzx.rs  decoder_arc_crunch.rs  decoder_arc_squash.rs  decoder_arc_squeeze.rs  decoder_arsenic.rs  decoder_bcj.rs  decoder_brotli.rs  decoder_bzip2.rs  decoder_deflate.rs  decoder_deflate64.rs  decoder_delta.rs  decoder_dispatch.rs  decoder_gzip.rs  decoder_h2_huffman.rs  decoder_lha.rs  decoder_lz4.rs  decoder_lz4_frame.rs  decoder_lz5.rs  decoder_lzah.rs  decoder_lzham.rs  decoder_lzma.rs  decoder_lznt1.rs  decoder_lzs.rs  decoder_lzss.rs  decoder_packbits.rs  decoder_ppmd.rs  decoder_rar2.rs  decoder_rar3.rs  decoder_rar5.rs  decoder_rle90.rs  decoder_sit13.rs  decoder_xpress.rs  decoder_xpress_huffman.rs  decoder_xz.rs  decoder_zip_implode.rs  decoder_zip_reduce.rs  decoder_zip_shrink.rs  decoder_zlib.rs  decoder_zstd.rs  roundtrip.rs
src/: bits.rs  checksum.rs  error.rs  factory.rs  huffman.rs  io.rs  lib.rs  limit.rs  packbits.rs  rar_filters.rs  rle.rs  rle90.rs  tokio_io.rs  traits.rs  vec.rs
src/adc/: mod.rs
src/amiga_lzx/: decoder.rs  encoder.rs  mod.rs
src/arc_crunch/: mod.rs
src/arc_squash/: mod.rs
src/arc_squeeze/: mod.rs
src/arsenic/: decoder.rs  mod.rs  pipeline.rs  range.rs  tables.rs
src/bcj/: arch.rs  mod.rs
src/bcj2/: mod.rs
src/brotli/: context.rs  dictionary.rs  encoder_ctx.rs  encoder_dict.rs  encoder_huffman.rs  encoder_iac.rs  encoder_lz77.rs  encoder_optimal.rs  huffman.rs  mod.rs  mod.rs.orig  transforms.rs
src/bwt/: mod.rs  tests.rs  transform.rs
src/bzip2/: bits.rs  bwt.rs  crc.rs  decoder.rs  encoder.rs  huffman.rs  mod.rs  mtf.rs  rle.rs
src/deflate/: decoder.rs  encoder.rs  lz77.rs  mod.rs  tables.rs
src/deflate64/: decoder.rs  encoder.rs  lz77.rs  mod.rs  tables.rs
src/delta/: mod.rs
src/gzip/: mod.rs
src/hpack/: huffman.rs  integer.rs  mod.rs  table.rs  tests.rs
src/huffman_codec/: mod.rs  tests.rs
src/lha/: bits.rs  dynamic_huff.rs  huffman.rs  lzhuf.rs  mod.rs  static_huff.rs
src/lz4/: block.rs  frame.rs  mod.rs
src/lz5/: block.rs  mod.rs  xxh32.rs
src/lzah/: adaptive.rs  bits.rs  mod.rs  offset.rs
src/lzfse/: bits.rs  decoder.rs  fse.rs  lzfse_v2.rs  lzvn.rs  mod.rs
src/lzham/: decoder.rs  mod.rs
src/lzma/: encoder.rs  mod.rs
src/lzma2/: lzma_payload.rs  mod.rs
src/lzma2_internal/: lzma2_decoder.rs  lzma2_encoder.rs  mod.rs
src/lznt1/: decoder.rs  encoder.rs  mod.rs
src/lzo/: block.rs  mod.rs
src/lzs/: bits.rs  decoder.rs  encoder.rs  mod.rs
src/lzss/: mod.rs
src/lzw/: mod.rs
src/lzx/: bitreader.rs  decoder.rs  encoder.rs  huffman.rs  mod.rs  tables.rs
src/mtf/: mod.rs
src/ppmd/: arena.rs  decoder.rs  mod.rs  model.rs  ppmd7.rs  range_dec.rs
src/qpack/: dynamic_table.rs  integer.rs  mod.rs  static_table.rs  tests.rs
src/quantum/: bits.rs  decoder.rs  mod.rs  model.rs  tables.rs
src/rangecoder/: mod.rs  tests.rs
src/rar1/: bits.rs  huffman.rs  lookup.rs  mod.rs  offset_history.rs  window.rs
src/rar2/: audio.rs  bitreader.rs  decoder.rs  huffman.rs  mod.rs  tables.rs
src/rar3/: bits.rs  decoder.rs  filters.rs  huffman.rs  mod.rs  tables.rs
src/rar5/: bits.rs  decoder.rs  filters.rs  huffman.rs  mod.rs
src/sit13/: bits.rs  decoder.rs  huffman.rs  mod.rs  tables.rs  window.rs
src/snappy/: mod.rs
src/xpress/: decoder.rs  encoder.rs  mod.rs
src/xpress_huffman/: decoder.rs  encoder.rs  huffman.rs  mod.rs
src/xz/: lzma2_decoder.rs  lzma2_encoder.rs  mod.rs
src/zip_implode/: decoder.rs  mod.rs
src/zip_reduce/: mod.rs
src/zip_shrink/: mod.rs
src/zlib/: mod.rs
src/zstd/: bitreader.rs  decoder.rs  encoder.rs  encoder_bitwriter.rs  encoder_fse.rs  encoder_huffman.rs  encoder_seq.rs  fse.rs  huffman.rs  literals.rs  matcher.rs  mod.rs  sequences.rs  xxhash.rs
tests/: adc.rs  amiga_lzx.rs  arc_crunch.rs  arc_squash.rs  arc_squeeze.rs  arsenic.rs  bcj.rs  bcj2.rs  box_compose.rs  brotli.rs  bzip2.rs  cli.rs  cross_system.rs  deflate.rs  deflate64.rs  delta.rs  gzip.rs  hpack.rs  io_adapters.rs  lha.rs  limit.rs  lz4.rs  lz4_frame.rs  lz5.rs  lzah.rs  lzfse.rs  lzham.rs  lzma.rs  lzma2.rs  lznt1.rs  lzo.rs  lzs.rs  lzss.rs  lzw.rs  lzx.rs  new_codecs_batch.rs  packbits.rs  ppmd.rs  quantum.rs  rar1.rs  (+19 more)
tests/fixtures/arsenic/: Galax.SIT
tests/fixtures/lzah/: convert-archive-fix.sit
tests/fixtures/ppmd/: english.ppmd  hello.ppmd  mixed.ppmd  repeat.ppmd  text.ppmd
tests/fixtures/sit13/: sample.sit
